<resources>
    <string name="app_name">ARK Shelf</string>
    <string name="app_name_debug">ARK Shelf [Debug]</string>
    <string name="url">Url</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="pick_folder">Pick folder</string>
    <string name="cancel">Cancel</string>
    <string name="no_internet">No Internet connection</string>
    <string name="unknown_host">Unknown host</string>
    <string name="invalid_url">Invalid url</string>
    <string name="internal_storage">Internal</string>
    <string name="settings">Settings</string>
    <string name="link_folder">Link folder</string>
    <string name="specify_link_folder">Please specify a link folder</string>
    <string name="pick">Pick</string>
    <string name="pick_link_folder">Pick link folder</string>
    <string name="link_copied">Link copied</string>
    <string name="crash_dialog_description">Sorry, the application crashed. Please send a report to the developers.</string>
    <string name="crash_dialog_title">Crash</string>
    <string name="crash_dialog_comment">You can add a comment here:</string>
    <plurals name="items">
        <item quantity="one">%d item</item>
        <item quantity="other">%d items</item>
    </plurals>
</resources>
